--- a/style.css
+++ b/style.css
@@ -65,11 +65,13 @@ header {
     object-fit: cover;
     position: sticky;
     top: 0;
-    padding: 3rem;
-    padding-top: 1rem;
+    padding: 0 3rem 0 3rem;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(2px);
     z-index: 10;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header h2 {
@@ -78,6 +80,16 @@ header h2 {
     font-weight: bold;
     float: left;
 }
+
+header .logo {
+  display: flex;
+  align-items: center;
+}
+
+header .logo img {
+  height: 5rem; /* Ajuste do tamanho da logo */
+}
+
 
 header nav ul li{
     margin: 10px;
@@ -253,4 +265,45 @@ plataforma
     width: 20%;
     float: right;
     margin-left: 2rem;
+}
+
+/************************************************
+NotFound (404)
+************************************************/
+
+.NotFound {
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+}
+
+
+.NotFound h1 {
+    font-size: 4rem;
+}
+
+.NotFound h2 {
+    font-weight: normal;
+}
+
+.NotFound a {
+    background-color: #30AFFF;
+    display: inline-block;
+    margin: 30px 0px 30px 0px;
+    padding: 10px 50px;
+    border-radius: 8px;
+    font-size: 0.9rem;
+    text-decoration: none;
+     font-weight: bold;
+    color: #FFFFFF;
+    transition: all 0.3s ease;
+    border: 2px solid transparent;
+}
+
+.NotFound a:hover {
+    background-color: #009DFF;
+    transform: translateY(-2px);
 }
