Ajuste Página Inicial

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header {
     object-fit: cover;
     position: sticky;
     top: 0;
-    padding: 0 3rem 0 3rem;
+    padding: 0.5rem 3rem 0.5rem 3rem;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(2px);
     z-index: 10;
@@ -87,7 +87,7 @@ header .logo {
 }
 
 header .logo img {
-  height: 5rem; /* Ajuste do tamanho da logo */
+  height: 2rem;
 }
 
 
@@ -188,22 +188,11 @@ Início
 plataforma
 ************************************************/
 
-.plataforma h2 {
-    padding: 50px 20px 50px 20px;
-    font-size: 2rem;
-    text-align: center;
-    color: #0D1B2A;
-}
-
-/************************************************
-plataforma
-************************************************/
-
-.plataforma ul {
+/*.plataforma ul {
     display: flex;
     justify-content: center;
     gap: 30px;
-    flex-wrap: wrap; /* Faz os cards quebrarem a linha em telas menores */
+    flex-wrap: wrap;
     color: #FFFFFF;
 }
 
@@ -219,52 +208,53 @@ plataforma
     text-decoration: none;
     list-style: none;
     max-width: 250px;
+} */
+
+.plataforma {
+    margin: 8rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+}
+
+.plataforma ul {
+    list-style: none;
 }
 
 .plataforma p {
-    font-size: 0.8rem;
-    text-align: center;
-    margin: 40px 0px 20px 0px;
-    color: #FFFFFF;
-}
-
-.plataforma ul li:hover {
-    border-color: #30AFFF;
-    transform: translateY(-5px);
+    font-size: .8rem;
+    text-align: left;
+    color: #000000;
+    margin: 0.8rem;
+    margin-right: 20rem;
 }
 
 
 .plataforma h3 {
-    font-size: 1.5rem;
-    text-align: center;
+    font-size: 1.3rem;
+    text-align: left;
+    margin: 0.5rem 0rem 0.5rem 0rem;
 }
+
 
 
 .plataforma h4 {
-    font-size: 1.4rem;
-    text-align: center;
+    font-size: 1.1rem;
+    text-align: left;
     font-weight: normal;
-    margin: 0 5rem 0 5rem;
+    margin: 0.5rem 0rem 0.5rem 0rem;
 }
-
-/************************************************
-plataforma
-************************************************/
 
 .plataforma h2 {
-    font-size: 2rem;
-    text-align: center;
+    font-size: 1.5rem;
+    text-align: left;
     color: #0D1B2A;
-}
-
-.plataforma {
-    padding: 5rem 4rem 5rem 4rem;
+    margin: 0.5rem 0rem 0.5rem 0rem;
 }
 
 .plataforma img {
-    width: 20%;
     float: right;
     margin-left: 2rem;
+    max-height: 900px;
 }
 
 /************************************************
