--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ Início
     object-fit: cover;
     display: block;
     width: 100%;
-    height: 880px;
+    max-height: 1010px;
     opacity: 0.3;
     background-color: #000000;
 }
@@ -296,4 +296,25 @@ NotFound (404)
 .NotFound a:hover {
     background-color: #009DFF;
     transform: translateY(-2px);
+}
+
+
+/************************************************
+footer
+************************************************/
+
+footer.ThreeCollum {
+    display: flex;
+    margin: 8rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+}
+
+.Parte1 img{
+    width: 10%;
+}
+
+footer.FullBar {
+    
+    text-align: center;
 }
