--- a/Sobre o projeto/css/sobreProjeto.css
+++ b/Sobre o projeto/css/sobreProjeto.css
@@ -2,108 +2,219 @@
 Poppins Font
 ************************************************/
 
+
+
+
 /* devanagari */
 @font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
-  unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0, U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
+unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0, U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
 }
 /* latin-ext */
 @font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
-  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
+unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
+unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
+
+
 
 /************************************************
 Coolors
 ************************************************/
 
 
+
+
+
+
+
+
 /************************************************
 Reset
 ************************************************/
 
+
+
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+
+
 
 /************************************************
 HTML
 ************************************************/
 
-html {
-    font-family: 'Poppins';
-    scroll-behavior: smooth;
-    background-color: #FFFFFF;
-}
+
+
 
 html {
-    font-size: calc(15px + 0.390625vw);
+  font-family: 'Poppins';
+  scroll-behavior: smooth;
+  background-color: #FFFFFF;
+}
+
+
+
+
+html {
+  font-size: calc(15px + 0.390625vw);
+
+
+
 
 }
+
+
+
 
 /************************************************
 header
 ************************************************/
 
+
+
+
 header {
-    object-fit: cover;
-    position: sticky;
-    top: 0;
-    padding: 3rem;
-    padding-top: 1rem;
-    background-color: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(2px);
-    z-index: 10;
+   object-fit: cover;
+   position: sticky;
+   top: 0;
+   padding: 0.5rem 3rem 0.5rem 3rem;
+   background-color: rgba(255, 255, 255, 0.8);
+   backdrop-filter: blur(2px);
+   z-index: 10;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
+
 
 header h2 {
-    font-size: 1.5rem;
-    color: #000000;
-    font-weight: bold;
-    float: left;
+   font-size: 1.5rem;
+   color: #000000;
+   font-weight: bold;
+   float: left;
 }
+
+
+header .logo {
+ display: flex;
+ align-items: center;
+}
+
+
+header .logo img {
+ height: 2rem;
+}
+
+
+
 
 header nav ul li{
-    margin: 10px;
-    display: inline;
-    float: right;
+   margin: 10px;
+   display: inline;
+   float: right;
 }
+
 
 header nav ul li a {
-    font-size: 0.8rem;
-    color: #000000;
-    text-decoration: none;
-    font-weight: normal;
+   font-size: 0.8rem;
+   color: #000000;
+   text-decoration: none;
+   font-weight: normal;
 }
+
 
 header nav ul li a.contato {
-    border-style: solid;
-    border-radius: 5px;
-    border-width: 0.1rem;
-    border-color: #009DFF;
-    padding: 0.2rem;
+   border-style: solid;
+   border-radius: 5px;
+   border-width: 0.1rem;
+   border-color: #009DFF;
+   padding: 0.2rem;
 }
 
+
 header nav ul li a:hover {
-    background-color: #009DFF;
-    color: #0D1B2A;
-    transition: all 0.3s ease;
-    border-radius: 5px;
-    padding: 0.2rem;
+   background-color: #009DFF;
+   color: #0D1B2A;
+   transition: all 0.3s ease;
+   border-radius: 5px;
+   padding: 0.2rem;
+}
+
+
+header nav ul li img{
+   width: 45px;
+   height: 45px;
+   display: block;
+   margin: 0 auto;
+   border-radius: 7px;
+   margin: 10px 0 10px 7px;
+}
+
+
+/************************************************
+Main
+************************************************/
+main h2{
+  text-align: left;
+  font-size: 1.5rem;
+  text-align: left;
+  color: #0D1B2A;
+  margin: 0.5rem 0rem 0.5rem 9rem;
+}
+.colab ul li img{
+  padding: 5px;
+  height: 20rem;
+}
+.imagem{
+   width: 500px;
+   height: auto;
+}
+
+
+/************************************************
+Footer
+************************************************/
+.ThreeCollum {
+   display: flex;
+   margin: 4rem 8rem 0rem 8rem;
+}
+
+
+.ThreeCollum p {
+   font-size: 0.8rem;
+   text-align: left;
+}
+
+
+.Parte1 img{
+   width: 15%;
+}
+
+
+.FullBar p{
+   text-align: center;
+   font-weight: 200;
+   font-size: 0.8rem;
+   margin: 0.8rem;
 }
