--- a/beneficios-alimentacao-equilibrada/css/style.css
+++ b/beneficios-alimentacao-equilibrada/css/style.css
@@ -49,7 +49,7 @@ HTML
 html {
     font-family: 'Poppins';
     scroll-behavior: smooth;
-    background-color: #f4f4f9;
+    background-color: #e4e4ea;
 }
 
 html {
@@ -132,8 +132,25 @@ section h1 {
 section p.meio {
     text-align: center;
     font-size: 20px;
-    padding: 0vw 20rem;
+    padding: 0vw 20rem 2rem 20rem;
 }
 section ul {
     display: flex;
+    text-align: center;
+    padding: 0 2rem 0 2rem;
+}
+section p {
+    color: rgb(111, 112, 112);
+    font-size: 20px;
+    text-align: left;
+}
+section h2 {
+    font-size: 1.4vw;
+    font-weight: bold;
+    text-align: left;
+}
+section ul li {
+    padding: 0 2rem;
+    background-color: white;
+    margin: 0 2rem;
 }
