--- a/beneficios-alimentacao-equilibrada/css/style.css
+++ b/beneficios-alimentacao-equilibrada/css/style.css
@@ -120,7 +120,7 @@ header nav ul li a:hover {
     padding: 0.2rem;
 }
 /************************************************
-beneficios
+geral
 ************************************************/
 section h1 {
     color: #009DFF;
@@ -138,6 +138,7 @@ section ul {
     display: flex;
     text-align: center;
     padding: 0 2rem 0 2rem;
+    justify-content: space-between;
 }
 section p {
     color: rgb(111, 112, 112);
@@ -152,5 +153,19 @@ section h2 {
 section ul li {
     padding: 0 2rem;
     background-color: white;
-    margin: 0 2rem;
+    margin: 0 1rem 0 1rem;
+    border: 2px ;
+    border-radius: 10px;
+    flex-direction: column;  
+    align-items: center;
+}
+section ul li img {
+    margin: 1.8rem 0 0 0;
+    border: 2px solid #616161;
+    border-radius: 10px;
+    width: 70%;
+}
+section ul li p {
+    margin-top: 8px;
+    text-align: justify;
 }
