--- a/beneficios-alimentacao-equilibrada/css/style.css
+++ b/beneficios-alimentacao-equilibrada/css/style.css
@@ -40,7 +40,7 @@ HTML
 html {
     font-family: 'Poppins';
     scroll-behavior: smooth;
-    background-color: #f0eded;
+    background-color: #e9e4e4;
 }
 html {
     font-size: calc(15px + 0.390625vw);
