--- a/Artigos/CSS/alimentaçãoEquilibrada.css
+++ b/Artigos/CSS/alimentaçãoEquilibrada.css
@@ -65,28 +65,41 @@ header {
     object-fit: cover;
     position: sticky;
     top: 0;
-    padding: 3rem;
-    padding-top: 1rem;
+    padding: 0.5rem 4rem 0.5rem 4rem;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(2px);
-    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-header h2 {
-    font-size: 1.5rem;
+header .logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 20px 0 0;
+}
+
+header .logo img {
+  height: 7rem;
+}
+
+header .logo a {
+font-size: 1.5rem;
     color: #000000;
     font-weight: bold;
     float: left;
+    text-decoration: none;
+    
 }
 
 header nav ul li{
-    margin: 10px;
+    margin: 20px;
     display: inline;
-    float: right;
 }
 
 header nav ul li a {
-    font-size: 0.8rem;
+    font-size: 3vw;
     color: #000000;
     text-decoration: none;
     font-weight: normal;
@@ -106,4 +119,35 @@ header nav ul li a:hover {
     transition: all 0.3s ease;
     border-radius: 5px;
     padding: 0.2rem;
+}
+/************************************************
+Introdução
+************************************************/
+main {
+    padding: 0.5rem 2rem 0.5rem 2rem;
+}
+main section.introduction h2 {
+  font-size: 8vw;
+  text-align: center;
+  color: #009DFF;
+  margin: 0 0 2vw 0;
+  font-weight: bold;
+}
+main section.introduction p {
+  text-align: center;
+  font-size: 3vw;
+    margin: 0 0 2vw 0;
+}
+/************************************************
+Nutrientes
+************************************************/
+section.nutrients h3 {
+  font-size: 4vw;
+  text-align: center;
+  color: #009DFF;
+  margin: 0 0 2vw 0;
+  font-weight: bold;
+}
+section.nutrients ul {
+  display: flex;
 }
