--- a/beneficios-alimentacao-equilibrada/css/style.css
+++ b/beneficios-alimentacao-equilibrada/css/style.css
@@ -168,6 +168,9 @@ section ul li div.texto {
 
 section ul li {
     width: 30%;
+    transition: all 0.3s ease;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+
 }
 section ul li div.texto p a {
     color: #009DFF;
@@ -187,4 +190,13 @@ p.footer {
     text-align: center;
     padding: 2rem;
 }
+/************************************************
+celular
+************************************************/
+@media only screen and (max-width: 920px) {
+    header {
+    padding: 0.5rem 0rem 0.5rem 0rem;
+    
+}
 
+}
