--- a/beneficios-alimentacao-equilibrada/css/style-beneficios.css
+++ b/beneficios-alimentacao-equilibrada/css/style-beneficios.css
@@ -183,12 +183,64 @@ section ul li:hover {
 /************************************************
 footer
 ************************************************/
-p.footer {
-    color: #000000;
-    font-weight: bold;
-    font-size: xx-small;
-    text-align: center;
-    padding: 2rem;
+footer {
+    background-color: white;
+}
+footer div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1vw 3vw 0 3vw;
+}
+footer div div {
+    display: block;
+}
+
+footer div div h2 {
+    font-size: 1.5vw;
+}
+footer div div ul li a {
+    font-size: 1vw;
+}
+footer div div p {
+    font-size: 1vw;
+}
+footer div a {
+    display: flex;
+    align-items: center;
+}
+footer div a img {
+    width: 8vw;
+}
+footer div div.logo img {
+   width: 5vw;
+}
+footer div div p {
+    margin: 10px 0;
+}
+footer div div.logo ul {
+    display: flex;
+    justify-content: space-around;
+}
+footer div div > h2 {
+    color: #009DFF;
+}
+footer div div ul li {
+    margin: 10px 0;
+}
+footer div div ul li a:hover {
+    text-decoration: underline #009DFF 0.1vw;
+}
+footer div div p.email {
+    color: #009DFF;
+}
+footer div.direitos  {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0 20px;
+}
+footer div.direitos p {
+    color: gray;
 }
 /************************************************
 celular
