--- a/style.css
+++ b/style.css
@@ -428,5 +428,8 @@ footer div div p.email {
 footer div.direitos  {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    margin: 10px 0 20px;
+}
+footer div.direitos p {
+    color: gray;
 }
