--- a/Sobre o projeto/css/sobreProjeto.css
+++ b/Sobre o projeto/css/sobreProjeto.css
@@ -5,6 +5,10 @@ Poppins Font
 
 
 
+
+
+
+
 /* devanagari */
 @font-face {
 font-family: 'Poppins';
@@ -33,9 +37,21 @@ unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+
 
 
 
+
+
+
+
 /************************************************
 Coolors
 ************************************************/
+
+
+
+
+
+
+
+
 
 
 
@@ -51,11 +67,19 @@ Reset
 
 
 
+
+
+
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
 }
+
+
+
+
 
 
 
@@ -67,21 +91,38 @@ HTML
 
 
 
+
+
+
+
 html {
-  font-family: 'Poppins';
-  scroll-behavior: smooth;
-  background-color: #FFFFFF;
+ font-family: 'Poppins';
+ scroll-behavior: smooth;
+ background-color: #f3f1f1;
+ text-decoration: none;
 }
 
 
 
 
+
+
+
+
 html {
-  font-size: calc(15px + 0.390625vw);
+ font-size: calc(15px + 0.390625vw);
+}
 
 
+html p{
+  margin: 3vw 10vw;
+}
 
 
+html ul{
+  margin: 2vw 6vw;
+  text-decoration: none;
+  list-style: none;
 }
 
 
@@ -94,126 +135,195 @@ header
 
 
 
+
+
+
+
 header {
-   object-fit: cover;
-   position: sticky;
-   top: 0;
-   padding: 0.5rem 3rem 0.5rem 3rem;
-   background-color: rgba(255, 255, 255, 0.8);
-   backdrop-filter: blur(2px);
-   z-index: 10;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
+  object-fit: cover;
+  position: sticky;
+  top: 0;
+  padding: 0.5rem 3rem 0.5rem 3rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(2px);
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+
 
 
 header h2 {
-   font-size: 1.5rem;
-   color: #000000;
-   font-weight: bold;
-   float: left;
+  font-size: 1.5rem;
+  color: #000000;
+  font-weight: bold;
+  float: left;
 }
+
+
 
 
 header .logo {
- display: flex;
- align-items: center;
+display: flex;
+align-items: center;
 }
 
 
+
+
 header .logo img {
- height: 2rem;
+height: 2rem;
 }
 
 
 
 
 header nav ul li{
-   margin: 10px;
-   display: inline;
-   float: right;
+  margin: 10px;
+  display: inline;
+  float: right;
 }
+
+
 
 
 header nav ul li a {
-   font-size: 0.8rem;
-   color: #000000;
-   text-decoration: none;
-   font-weight: normal;
+  font-size: 0.8rem;
+  color: #000000;
+  text-decoration: none;
+  font-weight: normal;
 }
+
+
 
 
 header nav ul li a.contato {
-   border-style: solid;
-   border-radius: 5px;
-   border-width: 0.1rem;
-   border-color: #009DFF;
-   padding: 0.2rem;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 0.1rem;
+  border-color: #009DFF;
+  padding: 0.2rem;
 }
+
+
 
 
 header nav ul li a:hover {
-   background-color: #009DFF;
-   color: #0D1B2A;
-   transition: all 0.3s ease;
-   border-radius: 5px;
-   padding: 0.2rem;
+  background-color: #009DFF;
+  color: #0D1B2A;
+  transition: all 0.3s ease;
+  border-radius: 5px;
+  padding: 0.2rem;
 }
 
+
 header nav ul li img{
-   width: 45px;
-   height: 45px;
-   display: block;
-   margin: 0 auto;
-   border-radius: 7px;
-   margin: 10px 0 10px 7px;
+  width: 45px;
+  height: 45px;
+  display: block;
+  margin: 0 auto;
+  border-radius: 7px;
+  margin: 10px 0 10px 7px;
 }
+
+
 
 
 /************************************************
 Main
 ************************************************/
-main h2{
-  text-align: left;
-  font-size: 1.5rem;
-  text-align: left;
-  color: #0D1B2A;
-  margin: 0.5rem 0rem 0.5rem 9rem;
+main{
+  text-align: center;
 }
+
+
+main h1{
+ text-align: center;
+ align-items: center;
+ justify-content: center;
+ font-size: 1.5rem;
+ color: #0D1B2A;
+ margin: 3vw 10vw;
+ margin-top: 3vw;
+ display: inline-block;
+ border-bottom: 3px solid #009DFF;
+ padding-bottom: 5px;
+}
+
+
+main h2{
+ text-align: center;
+ align-items: center;
+ justify-content: center;
+ font-size: 1.5rem;
+ color: #0D1B2A;
+ margin: 3vw 10vw;
+ margin-top: 4vw;
+   display: inline-block;
+ border-bottom: 3px solid #009DFF;
+ padding-bottom: 5px;
+}
+
+
 .colab ul li img{
-  padding: 5px;
-  height: 20rem;
+ padding: 5px;
+ height: 20rem;
+ border-radius: 0.6rem;
+}
+
+
+.colab ul.primeira-dupla{
+  display: flex;
+}
+
+
+.colab ul.segunda-dupla{
+  display: flex;
+}
+
+
+.colab ul.terceira-dupla{
+  display: flex;
 }
 .imagem{
-   width: 500px;
-   height: auto;
+  width: 500px;
+  height: auto;
+  border-color: solid 1px #009DFF;
 }
+
+
 
 
 /************************************************
 Footer
 ************************************************/
 .ThreeCollum {
-   display: flex;
-   margin: 4rem 8rem 0rem 8rem;
+  display: flex;
+  margin: 4rem 8rem 0rem 8rem;
 }
+
+
 
 
 .ThreeCollum p {
-   font-size: 0.8rem;
-   text-align: left;
+  font-size: 0.8rem;
+  text-align: left;
 }
+
+
 
 
 .Parte1 img{
-   width: 40%;
-   height: max-content;
+  width: 40%;
+  height: max-content;
 }
 
+
 .FullBar p{
-   text-align: center;
-   font-weight: 200;
-   font-size: 0.8rem;
-   margin: 0.8rem;
+  text-align: center;
+  font-weight: 200;
+  font-size: 0.8rem;
+  margin: 0.8rem;
 }
