--- a/beneficios-alimentacao-equilibrada/css/style-beneficios.css
+++ b/beneficios-alimentacao-equilibrada/css/style-beneficios.css
@@ -40,7 +40,7 @@ HTML
 html {
     font-family: 'Poppins';
     scroll-behavior: smooth;
-    background-color: #f0e9e9;
+    background-color: #f3f1f1;
 }
 html {
     font-size: calc(15px + 0.390625vw);
