--- a/Artigos/CSS/artigos.css
+++ b/Artigos/CSS/artigos.css
@@ -65,28 +65,41 @@ header {
     object-fit: cover;
     position: sticky;
     top: 0;
-    padding: 3rem;
-    padding-top: 1rem;
+    padding: 0.5rem 3rem 0.5rem 3rem;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(2px);
-    z-index: 10;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-header h2 {
-    font-size: 1.5rem;
+header .logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+
+header .logo img {
+  height: 2rem;
+}
+
+header .logo a {
+font-size: 1.5rem;
     color: #000000;
     font-weight: bold;
     float: left;
+    text-decoration: none;
+    
 }
 
 header nav ul li{
-    margin: 10px;
+    margin: 20px;
     display: inline;
-    float: right;
 }
 
 header nav ul li a {
-    font-size: 0.8rem;
+    font-size: 1.5vw;
     color: #000000;
     text-decoration: none;
     font-weight: normal;
