--- a/Artigos/CSS/micro-habitos.css
+++ b/Artigos/CSS/micro-habitos.css
@@ -61,23 +61,23 @@ header {
     object-fit: cover;
     position: sticky;
     top: 0;
-    padding: 0.5rem 4rem 0.5rem 4rem;
+    padding: 0.5rem 3rem 0.5rem 3rem;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(2px);
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
 }
 
 header .logo {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0 20px 0 0;
+  
 }
 
 header .logo img {
-  height: 7rem;
+  height: 2rem;
 }
 
 header .logo a {
@@ -122,6 +122,7 @@ Introdução
 ************************************************/
 
 section.introdução {
+    margin-top: 2rem;
     text-align: center;
 }
 section.introdução h2 {
@@ -211,7 +212,7 @@ footer div{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 1vw 3vw 0 3vw;
+    margin: 2vw 3vw 0 3vw;
 }
 footer div div {
     display: block;
