--- a/Sobre o projeto/css/sobreProjeto.css
+++ b/Sobre o projeto/css/sobreProjeto.css
@@ -118,8 +118,7 @@ html p{
   margin: 3vw 10vw;
 }
 
-
-html ul{
+.colab ul{
   margin: 2vw 6vw;
   text-decoration: none;
   list-style: none;
@@ -131,104 +130,66 @@ html ul{
 /************************************************
 header
 ************************************************/
-
-
-
-
-
-
-
-
 header {
-  object-fit: cover;
-  position: sticky;
-  top: 0;
-  padding: 0.5rem 3rem 0.5rem 3rem;
-  background-color: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(2px);
-  z-index: 10;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    object-fit: cover;
+    position: sticky;
+    top: 0;
+    padding: 0.5rem 3rem 0.5rem 3rem;
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(2px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-
-
-
-
-header h2 {
-  font-size: 1.5rem;
-  color: #000000;
-  font-weight: bold;
-  float: left;
-}
-
-
-
 
 header .logo {
-display: flex;
-align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
 }
-
-
-
 
 header .logo img {
-height: 2rem;
+  height: 2rem;
 }
 
-
-
+header .logo a {
+font-size: 1.5rem;
+    color: #000000;
+    font-weight: bold;
+    float: left;
+    text-decoration: none;
+    
+}
 
 header nav ul li{
-  margin: 10px;
-  display: inline;
-  float: right;
+    margin: 20px;
+    display: inline;
 }
-
-
-
 
 header nav ul li a {
-  font-size: 0.8rem;
-  color: #000000;
-  text-decoration: none;
-  font-weight: normal;
+    font-size: 1.5vw;
+    color: #000000;
+    text-decoration: none;
+    font-weight: normal;
 }
-
-
-
 
 header nav ul li a.contato {
-  border-style: solid;
-  border-radius: 5px;
-  border-width: 0.1rem;
-  border-color: #009DFF;
-  padding: 0.2rem;
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 0.1rem;
+    border-color: #009DFF;
+    padding: 0.2rem;
 }
-
-
-
 
 header nav ul li a:hover {
-  background-color: #009DFF;
-  color: #0D1B2A;
-  transition: all 0.3s ease;
-  border-radius: 5px;
-  padding: 0.2rem;
+    background-color: #009DFF;
+    color: #0D1B2A;
+    transition: all 0.3s ease;
+    border-radius: 5px;
+    padding: 0.2rem;
 }
-
-
-header nav ul li img{
-  width: 45px;
-  height: 45px;
-  display: block;
-  margin: 0 auto;
-  border-radius: 7px;
-  margin: 10px 0 10px 7px;
-}
-
-
+     
 
 
 /************************************************
