--- a/beneficios-alimentacao-equilibrada/css/style-beneficios.css
+++ b/beneficios-alimentacao-equilibrada/css/style-beneficios.css
@@ -48,6 +48,7 @@ html {
 /************************************************
 header
 ************************************************/
+
 header {
     object-fit: cover;
     position: sticky;
@@ -55,35 +56,43 @@ header {
     padding: 0.5rem 3rem 0.5rem 3rem;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(2px);
-    z-index: 10;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-header h2 {
-    font-size: 1.5rem;
-    color: #000000;
-    font-weight: bold;
-    float: left;
-}
+
 header .logo {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  
 }
+
 header .logo img {
   height: 2rem;
 }
-header nav ul li{
-    margin: 10px;
-    display: inline;
-    float: right;
+
+header .logo a {
+font-size: 1.5rem;
+    color: #000000;
+    font-weight: bold;
+    float: left;
+    text-decoration: none;
+    
 }
+
+header nav ul li{
+    margin: 20px;
+    display: inline;
+}
+
 header nav ul li a {
-    font-size: 0.8rem;
+    font-size: 1.5vw;
     color: #000000;
     text-decoration: none;
     font-weight: normal;
 }
+
 header nav ul li a.contato {
     border-style: solid;
     border-radius: 5px;
@@ -91,6 +100,7 @@ header nav ul li a.contato {
     border-color: #009DFF;
     padding: 0.2rem;
 }
+
 header nav ul li a:hover {
     background-color: #009DFF;
     color: #0D1B2A;
@@ -98,6 +108,7 @@ header nav ul li a:hover {
     border-radius: 5px;
     padding: 0.2rem;
 }
+     
 /************************************************
 geral
 ************************************************/
