--- a/Artigos/CSS/organização_alimentar.css
+++ b/Artigos/CSS/organização_alimentar.css
@@ -41,6 +41,7 @@ Reset
     padding: 0;
     box-sizing: border-box;
 }
+
 /************************************************
 HTML
 ************************************************/
@@ -50,7 +51,21 @@ html {
     scroll-behavior: smooth;
     background-color: #FFFFFF;
     font-size: calc(15px + 0.390625vw);
+    list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+main {
     margin: 0 5vw;
+}
+
+
+ul li {
+    list-style: none;
 }
 
 /************************************************
@@ -64,38 +79,37 @@ header {
     padding: 0.5rem 3rem 0.5rem 3rem;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(2px);
+    z-index: 10;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+header h2 {
+    font-size: 1.5rem;
+    color: #000000;
+    font-weight: bold;
+    float: left;
+}
+
 header .logo {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  
 }
 
 header .logo img {
   height: 2rem;
 }
 
-header .logo a {
-font-size: 1.5rem;
-    color: #000000;
-    font-weight: bold;
-    float: left;
-    text-decoration: none;
-    
-}
 
 header nav ul li{
-    margin: 20px;
+    margin: 10px;
     display: inline;
+    float: right;
 }
 
 header nav ul li a {
-    font-size: 1.5vw;
+    font-size: 0.8rem;
     color: #000000;
     text-decoration: none;
     font-weight: normal;
