--- a/Sobre o projeto/css/sobreProjeto.css
+++ b/Sobre o projeto/css/sobreProjeto.css
@@ -2,13 +2,6 @@
 Poppins Font
 ************************************************/
 
-
-
-
-
-
-
-
 /* devanagari */
 @font-face {
 font-family: 'Poppins';
@@ -34,42 +27,14 @@ src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) f
 unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-
-
-
-
-
-
-
 /************************************************
 Coolors
 ************************************************/
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /************************************************
 Reset
 ************************************************/
-
-
-
-
-
-
-
 
 * {
  margin: 0;
@@ -77,42 +42,26 @@ Reset
  box-sizing: border-box;
 }
 
-
-
-
-
-
-
-
 /************************************************
 HTML
 ************************************************/
 
-
-
-
-
-
-
-
 html {
- font-family: 'Poppins';
- scroll-behavior: smooth;
- background-color: #f3f1f1;
- text-decoration: none;
+    font-family: 'Poppins';
+    scroll-behavior: smooth;
+    background-color: #FFFFFF;
+    font-size: calc(15px + 0.390625vw);
+    list-style-type: none;
 }
 
-
-
-
-
-
-
-
-html {
- font-size: calc(15px + 0.390625vw);
+a {
+  text-decoration: none;
+  color: black;
 }
 
+main {
+    margin: 0 5vw;
+}
 
 html p{
   margin: 3vw 10vw;
@@ -125,11 +74,16 @@ html p{
 }
 
 
+ul li {
+    list-style: none;
+}
+
 
 
 /************************************************
 header
 ************************************************/
+
 header {
     object-fit: cover;
     position: sticky;
@@ -137,38 +91,37 @@ header {
     padding: 0.5rem 3rem 0.5rem 3rem;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(2px);
+    z-index: 10;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+header h2 {
+    font-size: 1.5rem;
+    color: #000000;
+    font-weight: bold;
+    float: left;
+}
+
 header .logo {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  
 }
 
 header .logo img {
   height: 2rem;
 }
 
-header .logo a {
-font-size: 1.5rem;
-    color: #000000;
-    font-weight: bold;
-    float: left;
-    text-decoration: none;
-    
-}
 
 header nav ul li{
-    margin: 20px;
+    margin: 10px;
     display: inline;
+    float: right;
 }
 
 header nav ul li a {
-    font-size: 1.5vw;
+    font-size: 0.8rem;
     color: #000000;
     text-decoration: none;
     font-weight: normal;
