--- a/Artigos/CSS/alimentaçãoEquilibrada.css
+++ b/Artigos/CSS/alimentaçãoEquilibrada.css
@@ -279,3 +279,9 @@ footer div.direitos p {
     color: gray;
     font-size: 0.8rem;
 }
+
+
+footer a {
+    text-decoration: none;
+    color: black;
+}
