--- a/Artigos/CSS/micro-habitos.css
+++ b/Artigos/CSS/micro-habitos.css
@@ -283,3 +283,7 @@ footer div.direitos p {
     color: gray;
     font-size: 0.8rem;
 }
+footer a {
+    text-decoration: none;
+    color: black;
+}
