--- a/Sobre-o-projeto/css/sobreProjeto.css
+++ b/Sobre-o-projeto/css/sobreProjeto.css
@@ -1,398 +1,326 @@
-  /************************************************
+/************************************************
   Poppins Font
   ************************************************/
 
-  /* devanagari */
-  @font-face {
-  font-family: 'Poppins';
+/* devanagari */
+@font-face {
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
-  unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0, U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
-  }
-  /* latin-ext */
-  @font-face {
-  font-family: 'Poppins';
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2)
+    format("woff2");
+  unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0,
+    U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
+}
+/* latin-ext */
+@font-face {
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
-  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-  font-family: 'Poppins';
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2)
+    format("woff2");
+  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF,
+    U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020,
+    U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
+  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+    U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
-  /************************************************
-  Coolors
-  ************************************************/
-
-
-  /************************************************
+/************************************************
   Reset
   ************************************************/
 
-  * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  }
+}
 
-  /************************************************
+/************************************************
   HTML
   ************************************************/
 
-  html {
-      font-family: 'Poppins';
-      scroll-behavior: smooth;
-      background-color: #FFFFFF;
-      font-size: calc(15px + 0.390625vw);
-      list-style-type: none;
-  }
+html {
+  font-family: "Poppins";
+  scroll-behavior: smooth;
+  background-color: #ffffff;
+}
 
-  a {
-    text-decoration: none;
-    color: black;
-  }
+html {
+  font-size: calc(15px + 0.390625vw);
+}
+ul li {
+  list-style-type: none;
+}
 
-  main {
-      margin: 0 5vw;
-  }
-
-  html p{
-    margin: 3vw 10vw;
-  }
-
-  .colab ul{
-    margin: 2vw 6vw;
-    text-decoration: none;
-    list-style: none;
-  }
-
-
-  ul li {
-      list-style: none;
-  }
-
-
-
-  /************************************************
+/************************************************
   header
   ************************************************/
 
-  header {
-      object-fit: cover;
-      position: sticky;
-      top: 0;
-      padding: 0.5rem 3rem 0.5rem 3rem;
-      background-color: rgba(255, 255, 255, 0.8);
-      backdrop-filter: blur(2px);
-      z-index: 10;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-  }
+header {
+  object-fit: cover;
+  position: sticky;
+  top: 0;
+  padding: 0.5rem 3rem 0.5rem 3rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(2px);
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  header h2 {
-      font-size: 1.5rem;
-      color: #000000;
-      font-weight: bold;
-      float: left;
-  }
+header h2 {
+  font-size: 1.5rem;
+  color: #000000;
+  font-weight: bold;
+  float: left;
+}
 
-  header .logo {
-    display: flex;
-    align-items: center;
-  }
+header .logo {
+  display: flex;
+  align-items: center;
+}
 
-  header .logo img {
-    height: 2rem;
-  }
+header .logo img {
+  height: 2rem;
+}
 
+header nav ul li {
+  margin: 10px;
+  display: inline;
+  float: right;
+}
 
-  header nav ul li{
-      margin: 10px;
-      display: inline;
-      float: right;
-  }
+header nav ul li a {
+  font-size: 0.8rem;
+  color: #000000;
+  text-decoration: none;
+  font-weight: normal;
+}
 
-  header nav ul li a {
-      font-size: 0.8rem;
-      color: #000000;
-      text-decoration: none;
-      font-weight: normal;
-  }
+header nav ul li a.contato {
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 0.1rem;
+  border-color: #009dff;
+  padding: 0.2rem;
+}
 
-  header nav ul li a.contato {
-      border-style: solid;
-      border-radius: 5px;
-      border-width: 0.1rem;
-      border-color: #009DFF;
-      padding: 0.2rem;
-  }
+header nav ul li a:hover {
+  background-color: #009dff;
+  color: #0d1b2a;
+  transition: all 0.3s ease;
+  border-radius: 5px;
+  padding: 0.2rem;
+}
 
-  header nav ul li a:hover {
-      background-color: #009DFF;
-      color: #0D1B2A;
-      transition: all 0.3s ease;
-      border-radius: 5px;
-      padding: 0.2rem;
-  }
-  header nav ul li img{
-    width: 45px;
-    height: 45px;
-    display: block;
-    margin: 0 auto;
-    border-radius: 7px;
-    margin: 10px 0 10px 7px;
-  }/************************************************
-  Poppins Font
-  ************************************************/
+/************************************************
+Banner
+************************************************/
 
-  /* devanagari */
-  @font-face {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
-    unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0, U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
-  }
-  /* latin-ext */
-  @font-face {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
-    unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
-  a {
-      color: #000000;
-      text-decoration: none;
-  }
-  /************************************************
-  Coolors
-  ************************************************/
+.IMG {
+  position: relative;
+  height: auto;
+  background-color: #000000;
+}
 
+.IMG img {
+  object-fit: cover;
+  display: block;
+  width: 100%;
+  max-height: 1010px;
+  opacity: 0.3;
+  background-color: #000000;
+}
 
-  /************************************************
-  Reset
-  ************************************************/
+.banner {
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+}
 
-  * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-  }
+.banner {
+  text-align: center;
+}
 
-  /************************************************
-  HTML
-  ************************************************/
+.banner h1 {
+  margin: 30px 0px 30px 0px;
+  color: #ffffff;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
 
-  html {
-      font-family: 'Poppins';
-      scroll-behavior: smooth;
-      background-color: #FFFFFF;
-  }
+.banner p {
+  color: #ffffff;
+  margin: 30px 0px 30px 0px;
+  font-size: 1rem;
+}
 
-  html {
-      font-size: calc(15px + 0.390625vw);
+.banner a {
+  background-color: #30afff;
+  display: inline-block;
+  margin: 30px 0px 30px 0px;
+  padding: 12px 25px;
+  border-radius: 8px;
+  font-size: 0.9rem;
+  text-decoration: none;
+  font-weight: bold;
+  color: #ffffff;
+  transition: all 0.3s ease;
+  border: 2px solid transparent;
+}
 
-  }
-  ul li {
-      list-style-type: none;
-  }
-  /************************************************
-  header
-  ************************************************/
+.banner a:hover {
+  background-color: #009dff;
+  transform: translateY(-2px);
+}
 
-  header {
-      object-fit: cover;
-      position: sticky;
-      top: 0;
-      padding: 0.5rem 3rem 0.5rem 3rem;
-      background-color: rgba(255, 255, 255, 0.8);
-      backdrop-filter: blur(2px);
-      z-index: 10;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-  }
+/************************************************
+Main
+************************************************/
 
-  header h2 {
-      font-size: 1.5rem;
-      color: #000000;
-      font-weight: bold;
-      float: left;
-  }
+a {
+  text-decoration: none;
+  color: black;
+}
 
-  header .logo {
-    display: flex;
-    align-items: center;
-  }
+main {
+  text-align: center;
+}
 
-  header .logo img {
-    height: 2rem;
-  }
+.sobre {
+  margin: 1vw 10vw;
+}
 
+.colaboradores {
+  margin: 1vw 10vw;
+}
 
-  header nav ul li{
-      margin: 10px;
-      display: inline;
-      float: right;
-  }
+.colab {
+  margin: 1vw 10vw;
+}
 
-  header nav ul li a {
-      font-size: 0.8rem;
-      color: #000000;
-      text-decoration: none;
-      font-weight: normal;
-  }
-
-  header nav ul li a.contato {
-      border-style: solid;
-      border-radius: 5px;
-      border-width: 0.1rem;
-      border-color: #009DFF;
-      padding: 0.2rem;
-  }
-
-  header nav ul li a:hover {
-      background-color: #009DFF;
-      color: #0D1B2A;
-      transition: all 0.3s ease;
-      border-radius: 5px;
-      padding: 0.2rem;
-  }
-  
-  /************************************************
-  Main
-  ************************************************/
-  main{
-    text-align: center;
-  }
-
-
-  main h1{
+main h1 {
   text-align: center;
   align-items: center;
   justify-content: center;
   font-size: 1.5rem;
-  color: #0D1B2A;
+  color: #0d1b2a;
   margin: 3vw 10vw;
   margin-top: 3vw;
   display: inline-block;
-  border-bottom: 3px solid #009DFF;
+  border-bottom: 3px solid #009dff;
   padding-bottom: 5px;
-  }
+}
 
-
-  main h2{
+main h2 {
   text-align: center;
   align-items: center;
   justify-content: center;
   font-size: 1.5rem;
-  color: #0D1B2A;
+  color: #0d1b2a;
   margin: 3vw 10vw;
   margin-top: 4vw;
-    display: inline-block;
-  border-bottom: 3px solid #009DFF;
+  display: inline-block;
+  border-bottom: 3px solid #009dff;
   padding-bottom: 5px;
-  }
+}
 
-  main .sobre p{
-    margin: 40px;
-  }
+main .sobre p {
+  margin: 40px;
+}
 
-
-  .colab ul li p img{
+.colab ul li p img {
   padding: 5px;
   height: 20rem;
   border-radius: 0.6rem;
-  }
+}
 
+.colab .dupla {
+  display: flex;
+  justify-content: space-between;
+}
 
-   .colab .dupla{
-    display: flex;
-    justify-content: space-between;
-  }
+.imagem {
+  width: 600px;
+  height: auto;
+  border-color: solid 1px #009dff;
+}
 
-  .imagem{
-    width: 600px;
-    height: auto;
-    border-color: solid 1px #009DFF;
-  }
-
-
-
-
-  /************************************************
+/************************************************
   footer
   ************************************************/
-  footer div{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin: 1vw 3vw 0 3vw;
-  }
-  footer div div {
-      display: block;
-  }
+footer div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1vw 3vw 0 3vw;
+}
+footer div div {
+  display: block;
+}
 
-  footer div div h2 {
-      font-size: 1.5vw;
-  }
-  footer div div ul li a {
-      font-size: 1vw;
-  }
-  footer div div p {
-      font-size: 1vw;
-  }
-  footer div a {
-      display: flex;
-      align-items: center;
-  }
-  footer div a img {
-      width: 8vw;
-  }
-  footer div div.logo img {
-    width: 5vw;
-  }
-  footer div div p {
-      margin: 10px 0;
-  }
-  footer div div.logo ul {
-      display: flex;
-      justify-content: space-around;
-  }
-  footer div div > h2 {
-      color: #009DFF;
-  }
-  footer div div ul li {
-      margin: 10px 0;
-  }
-  footer div div ul li a:hover {
-      text-decoration: underline #009DFF 0.1vw;
-  }
-  footer div div p.email {
-      color: #009DFF;
-  }
-  footer div.direitos  {
-      display: flex;
-      justify-content: center;
-      margin: 10px 0 20px;
-  }
-  footer div.direitos p {
-      color: gray;
-  }
+footer div div h2 {
+  font-size: 1.5vw;
+}
+footer div div ul li a {
+  font-size: 1vw;
+}
+footer div div p {
+  font-size: 1vw;
+}
+footer div a {
+  display: flex;
+  align-items: center;
+}
+footer div a img {
+  width: 8vw;
+}
+footer div div.logo img {
+  width: 5vw;
+}
+footer div div p {
+  margin: 10px 0;
+}
+footer div div.logo ul {
+  display: flex;
+  justify-content: space-around;
+}
+footer div div > h2 {
+  color: #009dff;
+}
+footer div div ul li {
+  margin: 10px 0;
+}
+footer div div ul li a:hover {
+  text-decoration: underline #009dff 0.1vw;
+}
+footer div div p.email {
+  color: #009dff;
+}
+footer div.direitos {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0 20px;
+}
+footer div.direitos p {
+  color: gray;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+}
