--- a/Sobre-o-projeto/css/sobreProjeto.css
+++ b/Sobre-o-projeto/css/sobreProjeto.css
@@ -138,7 +138,7 @@ Banner
   object-fit: cover;
   display: block;
   width: 100%;
-  max-height: 1010px;
+  height: 1010px;
   opacity: 0.3;
   background-color: #000000;
 }
