--- a/Artigos/CSS/alimentaçãoEquilibrada.css
+++ b/Artigos/CSS/alimentaçãoEquilibrada.css
@@ -55,7 +55,7 @@ HTML
 html {
   font-family: "Poppins";
   scroll-behavior: smooth;
-  background-color: #e4ba6b77;
+  background-color: #f7f7f7;
   font-size: calc(15px + 0.390625vw);
   list-style-type: none;
 }
@@ -160,22 +160,21 @@ section.nutrients h3 {
 section.nutrients ul div {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0 0 0 0;
 }
 section ul div li {
-      transition: all 0.3s ease;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
-
+  transition: all 0.3s ease;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
 }
 section ul div li:hover {
-    transform: translateY(-5px);
+  transform: translateY(-5px);
 }
 
 section.nutrients ul div li {
   background-color: white;
   align-items: center;
-    border-radius: 10px;
+  border-radius: 10px;
   list-style: none;
   margin: 10px 10px 2rem 20px;
   width: 50%;
@@ -197,11 +196,12 @@ section.nutrients ul li p a {
 }
 
 section.nutrients ul div li div img {
-  width: 30.625vw;
-  height: 22.604vw;
-    border: 2px solid #616161;
-    border-radius: 10px;
-    object-fit: cover;
+  border: 2px solid #616161;
+  border-radius: 10px;
+  object-fit: cover;
+  width: 90%;
+  height: 23vw;
+  margin: auto;
 }
 /************************************************
 Conclusão
@@ -267,18 +267,17 @@ footer div div ul li a:hover {
 footer div div p.email {
   color: #009dff;
 }
-footer div.direitos  {
-    display: flex;
-    justify-content: center;
-    margin: 10px 0 15px 0;
+footer div.direitos {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0 15px 0;
 }
 footer div.direitos p {
-    color: gray;
-    font-size: 0.8rem;
+  color: gray;
+  font-size: 0.8rem;
 }
 
-
 footer a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
