Atualização no design das páginas de artigos

--- a/Artigos/CSS/alimentaçãoEquilibrada.css
+++ b/Artigos/CSS/alimentaçãoEquilibrada.css
@@ -68,6 +68,15 @@ ul li {
   list-style: none;
 }
 
+body {
+  color: #333333;
+}
+
+p {
+  line-height: 1.6;
+}
+
+
 /************************************************
 header
 ************************************************/
@@ -147,6 +156,9 @@ main section.introduction p {
   font-size: 1rem;
   margin: 0 0 2vw 0;
 }
+
+
+
 /************************************************
 Nutrientes
 ************************************************/
