--- a/Sobre-o-projeto/css/sobreProjeto.css
+++ b/Sobre-o-projeto/css/sobreProjeto.css
@@ -52,7 +52,7 @@
 html {
   font-family: "Poppins";
   scroll-behavior: smooth;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
 }
 
 html {
