--- a/Artigos/CSS/artigoPrincipal.css
+++ b/Artigos/CSS/artigoPrincipal.css
@@ -139,6 +139,10 @@ section h1 {
   border-bottom: 3px solid #009dff;
   padding-bottom: 5px;
 }
+
+section h2 {
+  margin: 1.2vw 0 0 0;
+}
 section ul li h2 {
   color: #000000;
   font-weight: bold;
@@ -150,6 +154,7 @@ section div.tudo {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   padding: 2vw;
   border-radius: 1vw;
+  background-color: white;
 }
 
 section div.tudo > a {
