--- a/Artigos/CSS/micro-habitos.css
+++ b/Artigos/CSS/micro-habitos.css
@@ -55,7 +55,7 @@ HTML
 html {
   font-family: "Poppins";
   scroll-behavior: smooth;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
   font-size: calc(15px + 0.390625vw);
   list-style-type: none;
 }
@@ -63,6 +63,24 @@ html {
 main {
   margin: 0 10vw;
 }
+
+body {
+  color: #333333;
+}
+
+p {
+  line-height: 1.6;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+img {
+  border-radius: 15px;
+}
+
+
+
 
 /************************************************
 header
@@ -137,6 +155,8 @@ section.introdução {
 section.introdução h2 {
   color: #009dff;
   margin: 0 0 2.5rem 0;
+  font-size: 2rem;
+
 }
 section.introdução p {
   margin: 0 0 2.5rem 0;
@@ -163,6 +183,22 @@ section.explicação div.Exemplos ul li {
   margin: 0 0 35px 0;
   justify-content: space-around;
 }
+section.explicação ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+section.explicação li {
+  padding-left: 1.5em;
+  text-indent: -1.5em;
+}
+
+section.explicação li:before {
+  content: '✓';
+  color: #009dff; 
+  margin-right: 0.5em;
+}
+
 
 /************************************************
 Motivo
@@ -199,7 +235,25 @@ section.exercicio p {
 }
 section.exercicio div img {
   height: 70%;
+  
 }
+
+section.exercicio ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+section.exercicio li {
+  padding-left: 1.5em;
+  text-indent: -1.5em;
+}
+
+section.exercicio li:before {
+  content: '✓';
+  color: #009dff; 
+  margin-right: 0.5em;
+}
+
 /************************************************
 Referencia
 ************************************************/
