--- a/Artigos/CSS/organização_alimentar.css
+++ b/Artigos/CSS/organização_alimentar.css
@@ -56,7 +56,7 @@ HTML
 html {
   font-family: "Poppins";
   scroll-behavior: smooth;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
   font-size: calc(15px + 0.390625vw);
   list-style-type: none;
 }
@@ -73,6 +73,16 @@ main {
 ul li {
   list-style: none;
 }
+
+body {
+  color: #333333;
+}
+
+p {
+  line-height: 1.7;
+}
+
+
 
 /************************************************
 header
@@ -136,6 +146,7 @@ header nav ul li a:hover {
   padding: 0.2rem;
 }
 
+
 /************************************************
 introdução
 ************************************************/
@@ -143,17 +154,20 @@ section.introducao h2 {
   color: #009dff;
   margin: 2.5rem 0;
   text-align: center;
+  font-size: 2rem;
 }
 section.introducao p {
-  text-align: center;
+  text-align: left;
   margin: 0 0 2.5rem 0;
 }
+
+
 
 /************************************************
 planejamento
 ************************************************/
 section.planejamento h3 {
-  color: #009dff;
+  color: #333333;
   margin: 0 0 1rem 40px;
   font-weight: bold;
 }
@@ -162,7 +176,7 @@ section.planejamento p {
 }
 section.planejamento h4 {
   font-weight: bold;
-  color: #009dff;
+  color: #333333;
   margin: 0 0 1rem 40px;
   font-size: 1.2rem;
 }
@@ -171,7 +185,7 @@ section.planejamento h4 {
 Porção
 ************************************************/
 section.porção h3 {
-  color: #009dff;
+  color: #333333;
   margin: 1rem 0 1rem 40px;
 }
 section.porção > p {
@@ -185,17 +199,30 @@ section.adaptação > div {
   justify-content: space-between;
 }
 section.adaptação div div h3 {
-  color: #009dff;
+  color: #333333;
   margin: 1rem 0 1rem 40px;
 }
 section.adaptação div div p {
   margin: 1rem 0;
 }
 section.adaptação div div p span {
-  color: #009dff;
+  color: #333333;
+  font-size: 1.2rem;
 }
 section.adaptação p {
   margin: 2rem 0;
+}
+section.adaptação p.dica-extra {  
+  background-color: #e6f5ff; 
+  border-left: 4px solid #009dff;
+  padding: 15px;
+  margin: 20px 0;
+  border-radius: 5px;
+}
+
+section.adaptação p.dica-extra span {
+  font-weight: bold;
+  color: #007acc; 
 }
 
 /************************************************
